--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
   "author": "Bitovi",
   "license": "MIT",
   "dependencies": {
-    "bit-tabs": "^0.1.0-pre.1",
+    "bit-tabs": "^0.2.0",
     "bootstrap": "^3.3.5",
-    "can": "^2.3.0-pre.9",
-    "can-connect": "~0.2.2",
-    "can-ssr": "^0.7.1",
+    "can": "^2.3.0-beta.6",
+    "can-connect": "~0.3.1",
+    "can-ssr": "^0.9.1",
     "d3": "3.5.5",
-    "done-autorender": "^0.4.0",
-    "done-component": "^0.2.0",
-    "done-css": "~1.1.7",
+    "done-autorender": "^0.4.2",
+    "done-component": "^0.3.0",
+    "done-css": "~1.1.13",
     "es6-promise": "^2.2.0",
     "jquery": "^1.11.3",
     "place-my-order-api": "^0.4.2",
     "place-my-order-assets": "^0.1.6",
     "socket.io-client": "^1.3.5",
-    "steal": "^0.12.0-pre.0",
+    "steal": "^0.12.0-pre.7",
     "steal-platform": "0.0.4"
   },
   "devDependencies": {
-    "documentjs": "^0.3.0",
+    "documentjs": "^0.3.3",
     "donejs-deploy": "^0.1.6",
     "funcunit": "^3.0.0",
     "grunt": "^0.4.4",
     "grunt-cli": "^0.1.13",
     "steal-cordova": "0.1.1",
     "steal-nw": "0.1.3",
-    "steal-qunit": "0.1.0",
-    "steal-tools": "^0.12.0-pre.0",
+    "steal-qunit": "^0.1.1",
+    "steal-tools": "^0.12.0-pre.4",
     "testee": "^0.2.0"
   },
   "donejs": {
