--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "document": "documentjs",
     "build": "node build",
     "deploy": "firebase deploy",
-    "deploy:ci": "firebase deploy --token \"$FIREBASE_TOKEN\""
+    "deploy:ci": "firebase deploy --token \"$FIREBASE_TOKEN\"",
+    "dev-bundle": "steal-tools bundle --dev"
   },
   "engines": {
     "node": "5.8"
@@ -66,7 +67,7 @@
     "generator-donejs": "^1.0.0-alpha.0",
     "place-my-order-api": "^0.4.4",
     "place-my-order-assets": "^0.1.7",
-    "steal": "^1.0.5",
+    "steal": "^1.2.7",
     "steal-less": "^1.0.2",
     "steal-platform": "0.0.4",
     "steal-socket.io": "^4.0.9",
@@ -82,7 +83,7 @@
     "steal-cordova": "^0.1.3",
     "steal-nw": "^0.1.4",
     "steal-qunit": "^1.0.0",
-    "steal-tools": "^1.0.1",
+    "steal-tools": "1.2.0-pre.1",
     "testee": "^0.3.0"
   },
   "window": {
