--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_deploy:
   - node build
   - git add dist/ --force
   - git commit -m "Updating build."
-  - echo $FIREBASE_TOKEN
+  - echo "$FIREBASE_TOKEN"
   - 'npm run deploy:ci'
 deploy:
   skip_cleanup: true
