--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,23 @@ node_js: node
 addons:
   firefox: latest
 before_install:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+  - 'export DISPLAY=:99.0'
+  - sh -e /etc/init.d/xvfb start
 before_deploy:
-- git config --global user.email "me@example.com"
-- git config --global user.name "PMO deploy bot"
-- node build
-- git add dist/ --force
-- git commit -m "Updating build."
-- npm run deploy:ci
+  - git config --global user.email "me@example.com"
+  - git config --global user.name "PMO deploy bot"
+  - node build
+  - git add dist/ --force
+  - git commit -m "Updating build."
+  - npm run deploy:ci
 deploy:
   skip_cleanup: true
   provider: heroku
   app: place-my-order
   api_key:
-  - secure: KPr/1zV03FEFMclP/3ZMFQV7J5By3Qzv9JIq/NnhfbEylfcT8ck3zNotzK61TYOrJzSr4/nZlih4DKX1LgRV4YwN4YDz8HF+1atDsPUOhrNNs/1IPhikXjUPOjmCHwuockjC1sxYQh1SVgmknKTRwbYBDA4d/fN/JS7QfALxcgE=
+    - secure: >-
+        KPr/1zV03FEFMclP/3ZMFQV7J5By3Qzv9JIq/NnhfbEylfcT8ck3zNotzK61TYOrJzSr4/nZlih4DKX1LgRV4YwN4YDz8HF+1atDsPUOhrNNs/1IPhikXjUPOjmCHwuockjC1sxYQh1SVgmknKTRwbYBDA4d/fN/JS7QfALxcgE=
 env:
   global:
-    secure: O6vRO7vyAEVFqUvaHITZlT6skKApaoOQQBWg/fbxbEbmvlNfSzxsuGCT8YPQe3NcxlSPf+pE62cA+eSDzLkH9XVUfPMRiIb7g9njZnEtbi04JbpDqPfQf6GdP/C/HC1coHgguSjuT/0QDNgkszfq6vIVgwwhVNpg1fy67SRsnaY=
+    - secure: >-
+        d4qCvdtpg/oKBg78t2oDeG9D4yZQcj5Ma1Jm/aC5zlXNYyVeD8yT2yooSgo6F0D7lfwHPTF8AwaYeTm/fE5jRuVFG4arEn2T96XLxleGgS74Gp5g3sNnwU9IyQuIJnnn7MXTZlef9cTtvGCTCWHgJKSBMcos55W+bq/8OZLpzo0=
