--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "start": "done-serve --proxy http://localhost:7070 --port 8080",
     "develop": "done-serve --develop --proxy http://localhost:7070 --port 8080",
     "document": "documentjs",
-    "build": "node build",
-    "deploy": "firebase deploy",
-    "deploy:ci": "firebase deploy --token \"$FIREBASE_TOKEN\""
+    "build": "node build"
   },
   "engines": {
     "node": "10.0"
@@ -63,7 +61,7 @@
     "done-component": "^2.2.0",
     "done-css": "^3.0.2",
     "done-serve": "^3.0.0-pre.4",
-    "donejs-travis-deploy-to-firebase": "^1.0.1",
+    "donejs-travis-deploy-to-firebase": "^1.0.2",
     "generator-donejs": "^3.0.0-pre.2",
     "place-my-order-api": "^1.0.1",
     "place-my-order-assets": "^0.1.7",
