--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,16 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 before_deploy:
   - git config --global user.email "me@example.com"
-  - git config --global user.name "PMO deploy bot"
+  - git config --global user.name "deploy bot"
   - node build
   - git add dist/ --force
   - git commit -m "Updating build."
-  - 'npm run deploy:ci'
+  - npm run deploy:ci
+
 deploy:
   skip_cleanup: true
   provider: heroku
   app: place-my-order
-  api_key:
-    - secure: >-
-        KPr/1zV03FEFMclP/3ZMFQV7J5By3Qzv9JIq/NnhfbEylfcT8ck3zNotzK61TYOrJzSr4/nZlih4DKX1LgRV4YwN4YDz8HF+1atDsPUOhrNNs/1IPhikXjUPOjmCHwuockjC1sxYQh1SVgmknKTRwbYBDA4d/fN/JS7QfALxcgE=
 env:
   global:
     - secure: >-
