--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "done-autorender": "^2.4.3",
     "done-component": "^2.2.0",
     "done-css": "^3.0.2",
-    "done-serve": "^3.0.0-pre.4",
+    "done-serve": "^3.0.0",
     "donejs-travis-deploy-to-firebase": "^1.0.2",
     "donejs-travis-to-heroku": "0.0.2",
     "place-my-order-api": "^1.0.1",
@@ -81,7 +81,7 @@
     "donejs-cli": "^2.0.0",
     "firebase-tools": "^6.0.1",
     "funcunit": "^3.2.0",
-    "generator-donejs": "^3.0.0-pre.2",
+    "generator-donejs": "^3.0.0",
     "steal-conditional": "^1.0.0",
     "steal-qunit": "^1.0.1",
     "steal-tools": "^2.0.6",
