--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "testee test.html --browsers firefox --reporter Spec",
     "start": "done-serve --proxy http://localhost:7070 --port 8080",
     "develop": "done-serve --develop --proxy http://localhost:7070 --port 8080",
+    "develop-docker-mac": "done-serve --develop --proxy http://docker.for.mac.localhost:7070 --port 8080",
     "document": "documentjs",
     "build": "node build",
     "deploy": "firebase deploy",
