--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "api": "place-my-order-api --port 7070",
     "test": "testee test.html --browsers firefox --reporter Spec",
+    "test-chrome": "testee test.html --browsers chrome --reporter Spec",
     "start": "done-serve --proxy http://localhost:7070 --port 8080",
     "develop": "done-serve --develop --proxy http://localhost:7070 --port 8080",
     "develop-docker": "done-serve --develop --proxy http://place-my-order-api:7070 --port 8080",
