--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   api_key:
     secure: bgH/0ilteUySwuhQXbtmJyYF4NddMiQnnikMXLPav3ClNI2izOl91bVovOe9VTsOM7nYg9nLyOYdLcq/4VEjFwyiFitKPg143t36iDvMJeQTQcSMWcQDLwO7s/chT+l7Fs5KsREKcvrgA/qS9o099D19WxSLz5/oDJHqkhCfn40=
 before_deploy:
-  - git config --global user.email "me@example.com"
+  - git config --global user.email "cherif@bitovi.com"
   - git config --global user.name "deploy bot"
   - node build
   - git add dist/ --force
